responsividade, estilização e add justificações

--- a/home.html
+++ b/home.html
@@ -36,6 +36,12 @@
           >
           <div id="menu-hidde">
             <ul class="nav-hidde">
+              <li class="show-movel"><a href="">home</a></li>
+              <li class="show-movel">
+                <a href="./pages/sobre-nos.html">Sobre Nós</a>
+              </li>
+              <li class="show-movel"><a href="">Menu</a></li>
+              <li class="show-movel"><a href="">Playlist</a></li>
               <li>
                 <a href="/pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
