--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -16,7 +16,8 @@
   <body>
     <header>
       <div class="logo-slogan">
-        <img src="../images/logo.png" alt="" />
+        <img src="../images/logo.png" width="150" height="150" alt="" />
+        <h1 class="titulo">PARJA</h1>
         <p>o som que atrai e o sabor que conquista</p>
       </div>
       <div class="opcoes">
@@ -35,6 +36,12 @@
           >
           <div id="menu-hidde">
             <ul class="nav-hidde">
+              <li class="show-movel"><a href="/home.html">home</a></li>
+              <li class="show-movel">
+                <a href="./sobre-nos.html">Sobre Nós</a>
+              </li>
+              <li class="show-movel"><a href="">Menu</a></li>
+              <li class="show-movel"><a href="">Playlist</a></li>
               <li>
                 <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
@@ -128,7 +135,6 @@
           envolvente no nosso ambiente, o sabor do nosso café especial convida
           todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
           boa companhia. -->
-          <br />
           <br />
           Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
           <br />
