--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -30,7 +30,7 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="../pages/sobre-nos.html">Sobre Nós</a></li>
+            <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Playlist</a></li>
           </ul>
@@ -42,6 +42,12 @@
           >
           <div id="menu-hidde">
             <ul class="nav-hidde">
+              <li class="show-movel"><a href="/home.html">home</a></li>
+              <li class="show-movel">
+                <a href="./sobre-nos.html">Sobre Nós</a>
+              </li>
+              <li class="show-movel"><a href="">Menu</a></li>
+              <li class="show-movel"><a href="">Playlist</a></li>
               <li>
                 <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
@@ -107,49 +113,52 @@
         </div>
       </div>
     </header>
-    <main class="main-topicoUm">
-      <div>
-        <p>
-          <br />
-          <li>Nome da Empresa - PARJA LDA</li>
-          <br />
-          <li>
-            Logo - Foi discutido a ideia de usar um animal como logo e acabamos
-            por escolher um pinguim com chapéu e óculos para dar a ideia mais
-            formal.
-          </li>
-          <br />
-          <li>
-            Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João
-            Marques (33,33%)
-          </li>
-          <br />
-          <li>Organização do tipo privada com fins lucrativos</li>
-          <br />
-          <li>Capital Social - 60.000€</li>
-          <br />
-          <li>
-            CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser
-            muito á volta da venda de café
-          </li>
-          <br />
-          <li>NiF - 546727530</li>
-        </p>
-      </div>
-      <div class="explicacaoEmpresa">
-        <br />
-        <br />
-        O capital social da empresa ficou num total de 60.000€ da forma que
-        todos os sócios, Artiom, Pedro e João, contribuissem com uma parte igual
-        para este, acabando por utilizar esse dinheiro como forma de promover a
-        confiança externa na empresa e trazer uma certa segurança para
-        potenciais investidores.
-        <br />
-        <br />
-        Tornando assim PARJA em uma sociedade por quotas limitada ao capital
-        social.
-      </div>
-    </main>
+    <div class="main-container">
+      <main class="main-topicoUm">
+        <div>
+          <p>
+            <br />
+            <li>Nome da Empresa - PARJA LDA</li>
+            <br />
+            <li>
+              Logo - Foi discutido a ideia de usar um animal como logo e
+              acabamos por escolher um pinguim com chapéu e óculos para dar a
+              ideia mais formal.
+            </li>
+            <br />
+            <li>
+              Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João
+              Marques (33,33%)
+            </li>
+            <br />
+            <li>Organização do tipo privada com fins lucrativos</li>
+            <br />
+            <li>Capital Social - 60.000€</li>
+            <br />
+            <li>
+              CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser
+              muito á volta da venda de café
+            </li>
+            <br />
+            <li>NiF - 546727530</li>
+          </p>
+          <div class="explicacaoEmpresa">
+            <br />
+            <br />
+            O capital social da empresa ficou num total de 60.000€ da forma que
+            todos os sócios, Artiom, Pedro e João, contribuissem com uma parte
+            igual para este, acabando por utilizar esse dinheiro como forma de
+            promover a confiança externa na empresa e trazer uma certa segurança
+            para potenciais investidores.
+            <br />
+            <br />
+            Tornando assim PARJA em uma sociedade por quotas limitada ao capital
+            social.
+          </div>
+        </div>
+      </main>
+    </div>
+
     <footer>
       <div class="contatos">
         <ul>
