--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -161,118 +161,120 @@
         </div>
       </div>
       <!-- começo forças -->
-      <div class="opcao-hide" onclick="openOpcaoForca()">
-        <i id="flecha-forca" class="material-icons">arrow_forward</i>
-        <h1>forças</h1>
-      </div>
-      <div id="explicacao-forca" class="forca-explicacao">
-        <ul>
-          <li>
-            <strong>Qualidade:</strong> Produtos premium para uma experiência
-            única.
-          </li>
-          <li>
-            <strong>Ambiente Acolhedor:</strong>
-            Espaço inovador com sofás e escorrega para um toque descontraído.
-          </li>
-          <li>
-            <strong>tendimento Cordial:</strong>
-            A Serviço personalizado, incluindo visitas à casa do cliente.
-          </li>
-          <li>
-            <strong>Variedade e Experimentação:</strong>
-            Opções únicas, como cafés exóticos e sobremesas diferentes.
-          </li>
-          <li>
-            <strong>Sustentabilidade: </strong>
-            Compromisso com práticas ecológicas e conexão com a natureza.
-          </li>
-        </ul>
-      </div>
-      <!-- começo fraquezas -->
-      <div class="opcao-hide" onclick="openOpcaoFraqueza()">
-        <i id="flecha-fraqueza" class="material-icons">arrow_forward</i>
-        <h1>fraquezas</h1>
-      </div>
-      <div id="explicacao-fraquezas" class="explicacao-fraqueza">
-        <ul>
-          <li>
-            <strong>alta de Estacionamento:</strong>
-            F Limita o acesso de clientes de carro.
-          </li>
-          <li>
-            <strong>Horários Específicos: </strong>
-            Menos flexibilidade para diferentes rotinas.
-          </li>
-          <li>
-            <strong>Explicação Excessiva:</strong>
-            Pode tornar o atendimento longo e denso.
-          </li>
-          <li>
-            <strong>Foco Intenso no Cliente:</strong>
-            Pode parecer invasivo ou sobrecarregar a equipe.
-          </li>
-          <li>
-            Custo de Manutenção: Manter os sofás e o escorrega é caro e
-            desafiador para a sustentabilidade.
-          </li>
-        </ul>
-      </div>
-      <!-- começo oportunidades -->
-      <div class="opcao-hide" onclick="openOpcaoOportunidade()">
-        <i id="flecha-oportunidade" class="material-icons">arrow_forward</i>
-        <h1>oportunidade</h1>
-      </div>
-      <div id="explicacao-oportunidade" class="oportunidade-explicacao">
-        <ul>
-          <li>
-            <strong>Eventos de Degustação:</strong>
-            Atrai clientes ao oferecer uma experiência única de sabores.
-          </li>
-          <li>
-            <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
-          </li>
-          <li>
-            <strong>Parceria com Apps de Entrega: </strong>Expande o alcance e
-            as vendas.
-          </li>
-          <li>
-            <strong>Jazz ao Vivo:</strong> Diferencia o espaço com noites
-            temáticas.
-          </li>
-          <li>
-            <strong>Redes Sociais: </strong>
-            Aumenta a visibilidade e atrai fãs de café e jazz.
-          </li>
-        </ul>
-      </div>
-      <!-- começo ameaças -->
-      <div class="opcao-hide" onclick="openOpcaoAmeacas()">
-        <i id="flecha-ameacas" class="material-icons">arrow_forward</i>
-        <h1>ameaças</h1>
-      </div>
-      <div id="explicacao-ameacas" class="ameacas-explicacao">
-        <ul>
-          <li>
-            <strong>Eventos de Degustação:</strong>
-            Atrai clientes ao oferecer uma experiência única de sabores.
-          </li>
-          <li>
-            <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
-          </li>
-          <li>
-            <strong>Parceria com Apps de Entrega:</strong> Expande o alcance e
-            as vendas.
-          </li>
-          <li>
-            <strong>Jazz ao Vivo: </strong>Diferencia o espaço com noites
-            temáticas.
-          </li>
-          <li>
-            Redes Sociais: Aumenta a visibilidade e atrai fãs de café e jazz.
-          </li>
-        </ul>
-      </div>
+      <div class="container-hides"> 
+        <div class="opcao-hide" onclick="openOpcaoForca()">
+          <i id="flecha-forca" class="material-icons">arrow_forward</i>
+          <h1>forças</h1>
+        </div>
+        <div id="explicacao-forca" class="forca-explicacao">
+          <ul>
+            <li>
+              <strong>Qualidade:</strong> Produtos premium para uma experiência
+              única.
+            </li>
+            <li>
+              <strong>Ambiente Acolhedor:</strong>
+              Espaço inovador com sofás e escorrega para um toque descontraído.
+            </li>
+            <li>
+              <strong>tendimento Cordial:</strong>
+              A Serviço personalizado, incluindo visitas à casa do cliente.
+            </li>
+            <li>
+              <strong>Variedade e Experimentação:</strong>
+              Opções únicas, como cafés exóticos e sobremesas diferentes.
+            </li>
+            <li>
+              <strong>Sustentabilidade: </strong>
+              Compromisso com práticas ecológicas e conexão com a natureza.
+            </li>
+          </ul>
+        </div>
+        <!-- começo fraquezas -->
+        <div class="opcao-hide" onclick="openOpcaoFraqueza()">
+          <i id="flecha-fraqueza" class="material-icons">arrow_forward</i>
+          <h1>fraquezas</h1>
+        </div>
+        <div id="explicacao-fraquezas" class="explicacao-fraqueza">
+          <ul>
+            <li>
+              <strong>alta de Estacionamento:</strong>
+              F Limita o acesso de clientes de carro.
+            </li>
+            <li>
+              <strong>Horários Específicos: </strong>
+              Menos flexibilidade para diferentes rotinas.
+            </li>
+            <li>
+              <strong>Explicação Excessiva:</strong>
+              Pode tornar o atendimento longo e denso.
+            </li>
+            <li>
+              <strong>Foco Intenso no Cliente:</strong>
+              Pode parecer invasivo ou sobrecarregar a equipe.
+            </li>
+            <li>
+              Custo de Manutenção: Manter os sofás e o escorrega é caro e
+              desafiador para a sustentabilidade.
+            </li>
+          </ul>
+        </div>
+        <!-- começo oportunidades -->
+        <div class="opcao-hide" onclick="openOpcaoOportunidade()">
+          <i id="flecha-oportunidade" class="material-icons">arrow_forward</i>
+          <h1>oportunidade</h1>
+        </div>
+        <div id="explicacao-oportunidade" class="oportunidade-explicacao">
+          <ul>
+            <li>
+              <strong>Eventos de Degustação:</strong>
+              Atrai clientes ao oferecer uma experiência única de sabores.
+            </li>
+            <li>
+              <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
+            </li>
+            <li>
+              <strong>Parceria com Apps de Entrega: </strong>Expande o alcance e
+              as vendas.
+            </li>
+            <li>
+              <strong>Jazz ao Vivo:</strong> Diferencia o espaço com noites
+              temáticas.
+            </li>
+            <li>
+              <strong>Redes Sociais: </strong>
+              Aumenta a visibilidade e atrai fãs de café e jazz.
+            </li>
+          </ul>
+        </div>
+        <!-- começo ameaças -->
+        <div class="opcao-hide" onclick="openOpcaoAmeacas()">
+          <i id="flecha-ameacas" class="material-icons">arrow_forward</i>
+          <h1>ameaças</h1>
+        </div>
+        <div id="explicacao-ameacas" class="ameacas-explicacao">
+          <ul>
+            <li>
+              <strong>Eventos de Degustação:</strong>
+              Atrai clientes ao oferecer uma experiência única de sabores.
+            </li>
+            <li>
+              <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
+            </li>
+            <li>
+              <strong>Parceria com Apps de Entrega:</strong> Expande o alcance e
+              as vendas.
+            </li>
+            <li>
+              <strong>Jazz ao Vivo: </strong>Diferencia o espaço com noites
+              temáticas.
+            </li>
+            <li>
+              Redes Sociais: Aumenta a visibilidade e atrai fãs de café e jazz.
+            </li>
+          </ul>
+        </div>
+      </div> 
     </main>
     <footer>
       <div class="contatos">
