alteracao main.js, home.css, home.html

--- a/home.html
+++ b/home.html
@@ -109,9 +109,9 @@
     </header>
     <main>
       <div class="hero">
-        <h1>Bem-Vindo!</h1>
-        <p>Venha desfrutar da melhor experiência de café da cidade.</p>
-        <button><a href="/pages/sobre-nos.html">Sobre nós</a></button>
+        <h1 id="hum">Bem-Vindo!</h1>
+        <p id="p">Venha desfrutar da melhor experiência de café da cidade.</p>
+        <button id="btn"><a href="/pages/sobre-nos.html">Sobre nós</a></button>
       </div>
     </main>
     <script src="./script/main.js"></script>
