--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -21,18 +21,13 @@
         <p class="frase">o som que atrai e o sabor que conquista</p>
       </div>
 
-      <!-- <div class="logo-slogan">
-        <img src="../images/logo.png" alt="" />
-        <p>o som que atrai e o sabor que conquista</p>
-      </div> -->
-
       <div class="opcoes">
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
-            <li><a href="">Playlist</a></li>
+            <li><a href="https://open.spotify.com/playlist/0q1M2aOPIVUkc0kfpnweOn">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
