pagina spotify e ligacoes

--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -24,9 +24,9 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="">Sobre Nós</a></li>
+            <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
-            <li><a href="">Playlist</a></li>
+            <li><a href="../pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
