--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -27,7 +27,7 @@
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
-            <li><a href="https://open.spotify.com/playlist/0q1M2aOPIVUkc0kfpnweOn">Playlist</a></li>
+            <li><a href="../pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -40,6 +40,7 @@
               <li class="show-movel"><a href="/home.html">home</a></li>
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
+
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel"><a href="">Playlist</a></li>
