--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -27,7 +27,7 @@
             <li><a href="../home.html">home</a></li>
             <li><a href="../pages/sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
-            <li><a href="">Playlist</a></li>
+            <li><a href="../pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
