--- a/pages/topicoTres.html
+++ b/pages/topicoTres.html
@@ -38,11 +38,9 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li class="show-movel"><a href="/home.html">home</a></li>
-              <li class="show-movel">
-                <a href="./sobre-nos.html">Sobre Nós</a>
-              </li>
+              <li class="show-movel"><a href="./sobre-nos.html">Sobre Nós</a></li>
               <li class="show-movel"><a href="">Menu</a></li>
-              <li class="show-movel"><a href="">Playlist</a></li>
+              <li class="show-movel"><a href="../pages/playlist.html">Playlist</a></li>
               <li>
                 <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
