--- a/home.html
+++ b/home.html
@@ -23,10 +23,10 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="">home</a></li>
+            <li><a href="./home.html">home</a></li>
             <li><a href="./pages/sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Playlist</a></li>
+            <li><a href="./pages/menu.html">Menu</a></li>
+            <li><a href="./pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
