--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -25,8 +25,8 @@
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="../pages/playlist.html">Playlist</a></li>
+            <li><a href="../pages/menu.html">Menu</a></li>
+            <li><a href="../playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -41,7 +41,9 @@
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
-              <li class="show-movel"><a href="">Playlist</a></li>
+              <li class="show-movel">
+                <a href="../pages/playlist.html">Playlist</a>
+              </li>
               <li>
                 <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
