--- a/pages/topicoTres.html
+++ b/pages/topicoTres.html
@@ -26,8 +26,8 @@
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Playlist</a></li>
+            <li><a href="../pages/menu.html">Menu</a></li>
+            <li><a href="../playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -38,9 +38,13 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li class="show-movel"><a href="/home.html">home</a></li>
-              <li class="show-movel"><a href="./sobre-nos.html">Sobre Nós</a></li>
+              <li class="show-movel">
+                <a href="./sobre-nos.html">Sobre Nós</a>
+              </li>
               <li class="show-movel"><a href="">Menu</a></li>
-              <li class="show-movel"><a href="../pages/playlist.html">Playlist</a></li>
+              <li class="show-movel">
+                <a href="../pages/playlist.html">Playlist</a>
+              </li>
               <li>
                 <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
@@ -49,14 +53,14 @@
               </li>
               <li>
                 <a href="../pages/topicoDois.html"
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  2</a
+                  ><i id="flecha" class="material-icons flechinha">arrow_back</i
+                  >Tópico 2</a
                 >
               </li>
               <li>
                 <a href="../pages/topicoTres.html"
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  3</a
+                  ><i id="flecha" class="material-icons flechinha">arrow_back</i
+                  >Tópico 3</a
                 >
               </li>
               <li>
