--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,9 +10,10 @@
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/topicoUm.css" />
+    <link rel="stylesheet" href="/styles/playlist.css" />
     <title>Tópico 1</title>
   </head>
+
   <body>
     <header>
       <div class="logo-slogan">
@@ -26,8 +27,8 @@
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="../pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -41,13 +42,9 @@
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
-              <li class="show-movel"><a href="">Menu</a></li>
+              <li class="show-movel"><a href="../pages/menu.html">Menu</a></li>
               <li class="show-movel">
-                <a
-                  href="../pages/playlist.html
-                "
-                  >Playlist</a
-                >
+                <a href="../pages/playlist.html">Playlist</a>
               </li>
               <li>
                 <a href=""
@@ -114,52 +111,10 @@
         </div>
       </div>
     </header>
-    <div class="main-container">
-      <main class="main-topicoUm">
-        <div>
-          <p>
-            <br />
-            <li>Nome da Empresa - PARJA LDA</li>
-            <br />
-            <li>
-              Logo - Foi discutido a ideia de usar um animal como logo e
-              acabamos por escolher um pinguim com chapéu e óculos para dar a
-              ideia mais formal.
-            </li>
-            <br />
-            <li>
-              Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João
-              Marques (33,33%)
-            </li>
-            <br />
-            <li>Organização do tipo privada com fins lucrativos</li>
-            <br />
-            <li>Capital Social - 60.000€</li>
-            <br />
-            <li>
-              CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser
-              muito á volta da venda de café
-            </li>
-            <br />
-            <li>NiF - 546727530</li>
-          </p>
-          <div class="explicacaoEmpresa">
-            <br />
-            <br />
-            O capital social da empresa ficou num total de 60.000€ da forma que
-            todos os sócios, Artiom, Pedro e João, contribuissem com uma parte
-            igual para este, acabando por utilizar esse dinheiro como forma de
-            promover a confiança externa na empresa e trazer uma certa segurança
-            para potenciais investidores.
-            <br />
-            <br />
-            Tornando assim PARJA em uma sociedade por quotas limitada ao capital
-            social.
-          </div>
-        </div>
-      </main>
+    <div class="spotify-container"></div>
+    <div class="main-menu">
+      <h1>menu</h1>
     </div>
-
     <footer>
       <div class="contatos">
         <ul>
