--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -25,9 +25,9 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="../pages/sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="../pages/playlist.html">Playlist</a></li>
+            <li><a href="./sobre-nos.html">Sobre Nós</a></li>
+            <li><a href="../pages/menu.html">Menu</a></li>
+            <li><a href="../playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -42,7 +42,9 @@
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
               <li class="show-movel"><a href="">Menu</a></li>
-              <li class="show-movel"><a href="">Playlist</a></li>
+              <li class="show-movel">
+                <a href="../pages/playlist.html">Playlist</a>
+              </li>
               <li>
                 <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
@@ -161,7 +163,7 @@
         </div>
       </div>
       <!-- começo forças -->
-      <div class="container-hides"> 
+      <div class="container-hides">
         <div class="opcao-hide" onclick="openOpcaoForca()">
           <i id="flecha-forca" class="material-icons">arrow_forward</i>
           <h1>forças</h1>
@@ -231,7 +233,8 @@
               Atrai clientes ao oferecer uma experiência única de sabores.
             </li>
             <li>
-              <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
+              <strong>Divulgação Local:</strong> Fortalece a marca na
+              comunidade.
             </li>
             <li>
               <strong>Parceria com Apps de Entrega: </strong>Expande o alcance e
@@ -259,7 +262,8 @@
               Atrai clientes ao oferecer uma experiência única de sabores.
             </li>
             <li>
-              <strong>Divulgação Local:</strong> Fortalece a marca na comunidade.
+              <strong>Divulgação Local:</strong> Fortalece a marca na
+              comunidade.
             </li>
             <li>
               <strong>Parceria com Apps de Entrega:</strong> Expande o alcance e
@@ -274,7 +278,7 @@
             </li>
           </ul>
         </div>
-      </div> 
+      </div>
     </main>
     <footer>
       <div class="contatos">
