--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -45,64 +45,34 @@
                 <a href="../pages/playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="../pages/topicoUm.html"
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  1</a
-                >
+                <a href="../pages/topicoUm.html">Tópico 1</a>
               </li>
               <li>
-                <a href="../pages/topicoDois.html"
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  2</a
-                >
+                <a href="../pages/topicoDois.html">Tópico 2</a>
               </li>
               <li>
-                <a href="../pages/topicoTres.html"
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  3</a
-                >
+                <a href="../pages/topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  4</a
-                >
+                <a href="">Tópico 4</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  5</a
-                >
+                <a href="">Tópico 5</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  6</a
-                >
+                <a href="">Tópico 6</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  7</a
-                >
+                <a href="">Tópico 7</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  8</a
-                >
+                <a href="">Tópico 8</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  9</a
-                >
+                <a href="">Tópico 9</a>
               </li>
               <li>
-                <a href=""
-                  ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  10</a
-                >
+                <a href="">Tópico 10</a>
               </li>
             </ul>
           </div>
