--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -50,7 +50,7 @@
                 >
               </li>
               <li>
-                <a href="">Tópico 1</a>
+                <a href="../pages/topicoUm.html">Tópico 1</a>
               </li>
               <li>
                 <a href="../pages/topicoDois.html">Tópico 2</a>
@@ -59,7 +59,7 @@
                 <a href="../pages/topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="">Tópico 4</a>
+                <a href="../pages/topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
                 <a href="">Tópico 5</a>
