--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -54,7 +54,7 @@
                 <a href="../pages/topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="">Tópico 4</a>
+                <a href="../pages/topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
                 <a href="">Tópico 5</a>
