--- a/pages/topicoTres.html
+++ b/pages/topicoTres.html
@@ -55,7 +55,7 @@
                 <a href="../pages/topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="">Tópico 4</a>
+                <a href="../pages/topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
                 <a href="">Tópico 5</a>
