--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                 >
               </li>
               <li>
-                <a href=""
+                <a href="./pages/topicoSeis.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   6</a
                 >
