--- a/pages/menu.html
+++ b/pages/menu.html
@@ -56,13 +56,13 @@
                 <a href="../pages/topicoTres.html">Tópico 3</a>
               </li>
               <li>
-                <a href="../pages/topicoQuatro.html">Tópico 4</a>
+                <a href="">Tópico 4</a>
               </li>
               <li>
                 <a href="">Tópico 5</a>
               </li>
               <li>
-                <a href="">Tópico 6</a>
+                <a href="../pages/topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
