--- a/pages/topicoSeis.html
+++ b/pages/topicoSeis.html
@@ -69,30 +69,29 @@
               <li>
                 <a href="">Tópico 8</a>
               </li>
-              <li>
-                <a href="">Tópico 9</a>
-              </li>
-              <li>
-                <a href="">Tópico 10</a>
-              </li>
             </ul>
           </div>
         </div>
       </div>
     </header>
     <main>
+      <h1>~ TUTORIAIS ~</h1>
+      <h2>Tutorial para login do software</h2>
       <video controls>
         <source src="../videos/video1.mp4" type="video/mp4" />
         Seu navegador não suporta o elemento de vídeo.
       </video>
+      <h2>Tutorial para criar um contacto</h2>
       <video controls>
         <source src="../videos/video2.mp4" type="video/mp4" />
         Seu navegador não suporta o elemento de vídeo.
       </video>
+      <h2>Tutorial para criar um produto</h2>
       <video controls>
         <source src="../videos/video3.mp4" type="video/mp4" />
         Seu navegador não suporta o elemento de vídeo.
       </video>
+      <h2>Tutorial para criar uma fatura</h2>
       <video controls>
         <source src="../videos/video4.mp4" type="video/mp4" />
         Seu navegador não suporta o elemento de vídeo.
