--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -26,7 +26,7 @@
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
             <li><a href="../pages/menu.html">Menu</a></li>
-            <li><a href="../playlist.html">Playlist</a></li>
+            <li><a href="../pages/playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
