Parte do topico 4

--- a/pages/topicoQuatro.html
+++ b/pages/topicoQuatro.html
@@ -10,10 +10,9 @@
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/playlist.css" />
-    <title>Tópico 1</title>
+    <link rel="stylesheet" href="/styles/topicoQuatro.css" />
+    <title>Tópico 2</title>
   </head>
-
   <body>
     <header>
       <div class="logo-slogan">
@@ -27,8 +26,8 @@
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="./sobre-nos.html">Sobre Nós</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="../pages/playlist.html">Playlist</a></li>
+            <li><a href="../pages/menu.html">Menu</a></li>
+            <li><a href="../playlist.html">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
@@ -42,12 +41,12 @@
               <li class="show-movel">
                 <a href="./sobre-nos.html">Sobre Nós</a>
               </li>
-              <li class="show-movel"><a href="../pages/menu.html">Menu</a></li>
+              <li class="show-movel"><a href="">Menu</a></li>
               <li class="show-movel">
                 <a href="../pages/playlist.html">Playlist</a>
               </li>
               <li>
-                <a href="">Tópico 1</a>
+                <a href="../pages/topicoUm.html">Tópico 1</a>
               </li>
               <li>
                 <a href="../pages/topicoDois.html">Tópico 2</a>
@@ -75,10 +74,15 @@
         </div>
       </div>
     </header>
-    <div class="spotify-container"></div>
-    <div class="main-menu">
-      <h1>menu</h1>
-    </div>
+    <main>
+        <div class="title">Análise Externa</div>
+        <div class="circle-container">
+            <a href="economico.html" class="section1">Viabilidade<br>Econômica</a>
+            <a href="social.html" class="section2">Aspectos<br>Sociais</a>
+            <a href="ambiental.html" class="section3">Aspectos<br>Ambientais</a>
+        </div>
+    </main>
+
     <footer>
       <div class="contatos">
         <ul>
