--- a/pages/topicoSeis.html
+++ b/pages/topicoSeis.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/topicoQuatro.css" />
+    <link rel="stylesheet" href="/styles/topicoSeis.css" />
     <title>Tópico 2</title>
   </head>
   <body>
