Pagina do Topico 4 (Aspetos Ambientiais), vinil no home, algumas atualizacoes pelo site

--- a/home.html
+++ b/home.html
@@ -77,6 +77,17 @@
         <p id="p">Venha desfrutar da melhor experiência de café da cidade.</p>
         <button id="btn"><a href="/pages/sobre-nos.html">Sobre nós</a></button>
       </div>
+      <div class="vinyl-container">
+        <div class="vinyl-cover">
+          <a href="../pages/playlist.html"></a>
+            <img src="images/vinyl-cover.png" alt="Capa do disco de vinil" class="cover-image" />
+          </a>
+        </div>
+        <div class="overlay"></div>
+        <a href="../pages/playlist.html">
+          <img src="images/vinyl-record.png" alt="Disco de vinil" class="vinyl-record" />
+        </a>
+      </div> 
     </main>
     <script src="./script/main.js"></script>
   </body>
