--- a/pages/topicoQuatro.html
+++ b/pages/topicoQuatro.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/topicoQuatro.css" />
-    <title>Tópico 2</title>
+    <title>Tópico 4</title>
   </head>
   <body>
     <header>
@@ -77,9 +77,9 @@
     <main>
         <div class="title">Análise Externa</div>
         <div class="circle-container">
-            <a href="economico.html" class="section1">Viabilidade<br>Econômica</a>
-            <a href="social.html" class="section2">Aspectos<br>Sociais</a>
-            <a href="ambiental.html" class="section3">Aspectos<br>Ambientais</a>
+            <a href="../pages/economico.html" class="section1">Viabilidade<br>Econômica</a>
+            <a href="../pages/social.html" class="section2">Aspectos<br>Sociais</a>
+            <a href="../pages/ambiental.html" class="section3">Aspectos<br>Ambientais</a>
         </div>
     </main>
 
