Tópico 4: Concluido - Aspetos Sociais e a Viabilidade Economica

--- a/pages/ambiental.html
+++ b/pages/ambiental.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <link rel="stylesheet" href="/styles/ambiental.css" />
+    <link rel="stylesheet" href="/styles/ambEcoSoc.css" />
     <title>Aspetos Ambientais</title>
   </head>
   <body>
@@ -78,7 +78,7 @@
     <main>
         <header>
             <img src="../images/de-volta.png" alt="Voltar" class="back-icon" onclick="history.back()">
-            <h2>Recursos Ambientais da PARJA LDA</h2>
+            <h2>Aspetos Ambientais da PARJA LDA</h2>
         </header>
         <section>
             <h3>Estruturais e de Design</h3>
