--- a/pages/topicoQuatro.html
+++ b/pages/topicoQuatro.html
@@ -78,8 +78,8 @@
         <div class="title">Análise Externa</div>
         <div class="circle-container">
             <a href="../pages/economico.html" class="section1">Viabilidade<br>Econômica</a>
-            <a href="../pages/social.html" class="section2">Aspectos<br>Sociais</a>
-            <a href="../pages/ambiental.html" class="section3">Aspectos<br>Ambientais</a>
+            <a href="../pages/social.html" class="section2">Aspetos<br>Sociais</a>
+            <a href="../pages/ambiental.html" class="section3">Aspetos<br>Ambientais</a>
         </div>
     </main>
 
