--- a/pages/topicoSeis.html
+++ b/pages/topicoSeis.html
@@ -58,10 +58,10 @@
                 <a href="../pages/topicoQuatro.html">Tópico 4</a>
               </li>
               <li>
-                <a href="">Tópico 5</a>
+                <a href="../pages/topicoCinco.html">Tópico 5</a>
               </li>
               <li>
-                <a href="">Tópico 6</a>
+                <a href="../pages/topicoSeis.html">Tópico 6</a>
               </li>
               <li>
                 <a href="">Tópico 7</a>
